@@ -1,5 +1,6 @@
 - Calendar month print will now show events between before 08:00 and after 17:59
 - Fixed summer- / wintertime issue in the calendar's month print
+- Calendar: Event context menu, disabled copy of private events
 
 07-10-2014 5.0.83
 - Signed GOTA jar file unit 2016.
